@@ -2099,6 +2099,17 @@
       </component>
     </version>
   </module>
+  <module name="rmm-utils">
+    <version release="gnome-2.6">
+      <component name="rmm-utils" dir="rmm-utils" group="extras">
+	<podir dir="po"/>
+	<potname name="rmm-utils.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="sawfish">
     <version release="gnome-2.6">
       <component name="sawfish" dir="sawfish" group="extras">
