@@ -1,5 +1,9 @@
 2003-10-04  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added rmm-utils.
+
+2003-10-04  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Removed 1.4 core section. It's not
 	used anyway.
 
